--- a/foosball-stats-app/src/app/pages/player/player-detail/player-detail.component.html
+++ b/foosball-stats-app/src/app/pages/player/player-detail/player-detail.component.html
@@ -1,117 +1,156 @@
-<div class="animated fadeIn">
-  <div class="card">
-    <div class="card-header">
-      <i class="icon-drop"></i> {{ playerDetail.name }}
+<div class="detail-wrapper" *ngIf="playerDetail">
+  <div class="heading">
+    <div class="name">{{ playerDetail.name }}</div>
+  </div>
+  <div class="header">
+    <div class="player-info">
+      <div class="row">
+        <div class="label">Total events played</div>
+        <div>{{ playerDetail.playedEvents }}</div>
+      </div>
+      <div class="row">
+        <div class="label">First event played</div>
+        <div>{{ playerDetail.yearOfFirstEvent }}</div>
+      </div>
+
+      <div class="row">
+        <div class="label">First places</div>
+        <div>
+          {{ playerDetail.firstPlacesCount }} ({{
+            playerDetail.firstPlacePercentage | number: "1.2-2"
+          }}%)
+        </div>
+      </div>
+      <div class="row">
+        <div class="label">Second places</div>
+        <div>
+          {{ playerDetail.secondPlacesCount }} ({{
+            playerDetail.secondPlacePercentage | number: "1.2-2"
+          }}%)
+        </div>
+      </div>
+      <div class="row">
+        <div class="label">Third places</div>
+        <div>
+          {{ playerDetail.thirdPlacesCount }} ({{
+            playerDetail.thirdPlacePercentage | number: "1.2-2"
+          }}%)
+        </div>
+      </div>
+      <div class="row">
+        <div class="label">Top 3</div>
+        <div>
+          {{
+            playerDetail.firstPlacesCount +
+              playerDetail.secondPlacesCount +
+              playerDetail.thirdPlacesCount
+          }}
+          ({{ playerDetail.top3Percentage | number: "1.2-2" }}%)
+        </div>
+      </div>
     </div>
-    <div class="card-body">
-      <div>Total events played: {{ playerDetail.playedEvents }}</div>
-      <div>First event played: {{ playerDetail.yearOfFirstEvent }}</div>
+  </div>
 
-      <div>
-        First places: {{ playerDetail.firstPlacesCount }} ({{
-          playerDetail.firstPlacePercentage | number: "1.2-2"
-        }}%)
-      </div>
-      <div>
-        Second places: {{ playerDetail.secondPlacesCount }} ({{
-          playerDetail.secondPlacePercentage | number: "1.2-2"
-        }}%)
-      </div>
-      <div>
-        Third places: {{ playerDetail.thirdPlacesCount }} ({{
-          playerDetail.thirdPlacePercentage | number: "1.2-2"
-        }}%)
-      </div>
-      <div>
-        Top 3:
-        {{
-          playerDetail.firstPlacesCount +
-            playerDetail.secondPlacesCount +
-            playerDetail.thirdPlacesCount
-        }}
-        ({{ playerDetail.top3Percentage | number: "1.2-2" }}%)
-      </div>
-      <mat-accordion>
-        <mat-expansion-panel>
-          <mat-expansion-panel-header>
-            <mat-panel-title> Event results </mat-panel-title>
-          </mat-expansion-panel-header>
+  <div class="detail-card">
+    <div class="card-title">Event results</div>
+    <dx-data-grid
+      [dataSource]="playerDetail.eventTeams"
+      [remoteOperations]="true"
+      [columnAutoWidth]="true"
+      [showRowLines]="true"
+      [showBorders]="false"
+      [hoverStateEnabled]="true"
+      [columnHidingEnabled]="true"
+      [wordWrapEnabled]="true"
+    >
+      <dxo-load-panel [enabled]="false"></dxo-load-panel>
+      <dxo-filter-row [visible]="true"></dxo-filter-row>
+      <dxo-selection mode="single"></dxo-selection>
+      <dxo-paging [pageSize]="10"></dxo-paging>
+      <dxo-pager
+        [showPageSizeSelector]="true"
+        [allowedPageSizes]="[10, 25, 50, 100]"
+      ></dxo-pager>
+      <dxo-sorting mode="multiple"></dxo-sorting>
 
-          <table
-            mat-table
-            [dataSource]="playerDetail.eventTeams"
-            class="mat-elevation-z8"
-          >
-            <ng-container matColumnDef="eventName">
-              <th mat-header-cell *matHeaderCellDef>Event name</th>
-              <td mat-cell *matCellDef="let element">
-                {{ element.event.name }} ({{ element.event.description }})
-              </td>
-            </ng-container>
-            <ng-container matColumnDef="eventDate">
-              <th mat-header-cell *matHeaderCellDef>Date</th>
-              <td mat-cell *matCellDef="let element">
-                {{ element.event.date }}
-              </td>
-            </ng-container>
-            <ng-container matColumnDef="ranking">
-              <th mat-header-cell *matHeaderCellDef>Ranking</th>
-              <td mat-cell *matCellDef="let element">
-                {{ element.ranking }} / {{ element.event.teamsCount }}
-              </td>
-            </ng-container>
-            <ng-container matColumnDef="player1">
-              <th mat-header-cell *matHeaderCellDef>Player 1</th>
-              <td mat-cell *matCellDef="let element">
-                {{ element.team.players[0].name }}
-              </td>
-            </ng-container>
-            <ng-container matColumnDef="player2">
-              <th mat-header-cell *matHeaderCellDef>Player 2</th>
-              <td mat-cell *matCellDef="let element">
-                {{
-                  element.team.players[1] ? element.team.players[1].name : ""
-                }}
-              </td>
-            </ng-container>
+      <dxi-column dataField="id" [visible]="false"></dxi-column>
 
-            <tr mat-header-row *matHeaderRowDef="eventsColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: eventsColumns"></tr>
-          </table>
-        </mat-expansion-panel>
-        <mat-expansion-panel>
-          <mat-expansion-panel-header>
-            <mat-panel-title> Teams</mat-panel-title>
-          </mat-expansion-panel-header>
+      <dxi-column
+        dataField="event.name"
+        caption="Name"
+        dataType="string"
+      ></dxi-column>
 
-          <table
-            mat-table
-            [dataSource]="playerDetail.teams"
-            class="mat-elevation-z8"
-          >
-            <ng-container matColumnDef="player1">
-              <th mat-header-cell *matHeaderCellDef>Player 1</th>
-              <td mat-cell *matCellDef="let element">
-                {{ element.players[0].name }}
-              </td>
-            </ng-container>
-            <ng-container matColumnDef="player2">
-              <th mat-header-cell *matHeaderCellDef>Player 2</th>
-              <td mat-cell *matCellDef="let element">
-                {{ element.players[1]?.name }}
-              </td>
-            </ng-container>
-            <ng-container matColumnDef="playedEvents">
-              <th mat-header-cell *matHeaderCellDef>Played events</th>
-              <td mat-cell *matCellDef="let element">
-                {{ element.eventTeams.length }}
-              </td>
-            </ng-container>
-            <tr mat-header-row *matHeaderRowDef="teamsColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: teamsColumns"></tr>
-          </table>
-        </mat-expansion-panel>
-      </mat-accordion>
-    </div>
+      <dxi-column
+        dataField="event.description"
+        caption="Description"
+        dataType="string"
+      ></dxi-column>
+      <dxi-column
+        dataField="event.date"
+        caption="Date"
+        dataType="datetime"
+        format="dd. MM. yyyy"
+      ></dxi-column>
+      <dxi-column
+        dataField="ranking"
+        caption="Ranking"
+        dataType="number"
+      ></dxi-column>
+      <dxi-column
+        dataField="team.players[0].name"
+        caption="Player 1"
+        dataType="string"
+      ></dxi-column>
+      <dxi-column
+        dataField="team.players[1].name"
+        caption="Player 2"
+        dataType="string"
+      ></dxi-column>
+    </dx-data-grid>
+  </div>
+
+  <div class="detail-card">
+    <div class="card-title">Teams</div>
+
+    <dx-data-grid
+      [dataSource]="playerDetail.teams"
+      [remoteOperations]="true"
+      [columnAutoWidth]="true"
+      [showRowLines]="true"
+      [showBorders]="false"
+      [hoverStateEnabled]="true"
+      [columnHidingEnabled]="true"
+      [wordWrapEnabled]="true"
+    >
+      <dxo-load-panel [enabled]="false"></dxo-load-panel>
+      <dxo-filter-row [visible]="true"></dxo-filter-row>
+      <dxo-selection mode="single"></dxo-selection>
+      <dxo-paging [pageSize]="10"></dxo-paging>
+      <dxo-pager
+        [showPageSizeSelector]="true"
+        [allowedPageSizes]="[10, 25, 50, 100]"
+      ></dxo-pager>
+      <dxo-sorting mode="multiple"></dxo-sorting>
+
+      <dxi-column dataField="id" [visible]="false"></dxi-column>
+
+      <dxi-column
+        dataField="players[0].name"
+        caption="Player 1"
+        dataType="string"
+      ></dxi-column>
+
+      <dxi-column
+        dataField="players[1].name"
+        caption="Player 2"
+        dataType="string"
+      ></dxi-column>
+      <dxi-column
+        dataField="eventTeams.length"
+        caption="Played events"
+        dataType="number"
+      ></dxi-column>
+    </dx-data-grid>
   </div>
 </div>
