--- a/foosball-stats-app/src/app/pages/player/player-detail/player-detail.component.scss
+++ b/foosball-stats-app/src/app/pages/player/player-detail/player-detail.component.scss
@@ -1,3 +1,52 @@
-table {
-  width: 100%;
+@import "../../../../variables.scss";
+
+.heading {
+  margin-top: 30px;
+  margin-bottom: 20px;
+
+  .name {
+    font-size: 24px;
+    font-weight: 600;
+  }
+}
+
+.header {
+  padding: 30px;
+  background-color: white;
+  border-radius: 5px;
+  margin-bottom: 30px;
+
+  .player-info {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+
+    .row {
+      display: flex;
+      justify-content: space-between;
+      max-width: 400px;
+      align-items: center;
+
+      .label {
+        color: $blue-grey-400;
+      }
+
+      div:last-child {
+        font-weight: 500;
+      }
+    }
+  }
+}
+
+.detail-card {
+  padding: 30px;
+  background-color: white;
+  border-radius: 5px;
+  margin-bottom: 30px;
+
+  .card-title {
+    margin-bottom: 30px;
+    font-size: 16px;
+    font-weight: 600;
+  }
 }
