--- a/foosball-stats-app/src/app/pages/player/players-list/players-list.component.scss
+++ b/foosball-stats-app/src/app/pages/player/players-list/players-list.component.scss
@@ -1,9 +1,12 @@
-table {
-  width: 100%;
-}
-
-.card-header {
+.heading {
   font-size: 18px;
   font-weight: 600;
   padding: 30px 0;
+}
+
+.switch-with-label {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 20px;
 }
